# Financial-Analyst

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  analyst.py
