[project]
name = "financial-analyst"
version = "0.1.0"
description = "Financial analysis project"
dependencies = [
    "yfinance",
    "groq", 
    "schedule",
    "python-dotenv",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
